--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,5 +1,11 @@
+
+
+
+
+
+
 html, body, footer {
-    background-color: #afb8b9;
+    background-color: rgb(0 ,0 ,20);
     color: #636b6f;
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
@@ -102,10 +108,9 @@ html, body, footer {
     width: 100%;
     }
 
-.card > .card-header{
+.card-header{
     background-color: #ffae00;
     color: #2f4f4f;
-    text 
     }
 
 .card-body{
