--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -5,7 +5,7 @@ html, body{
     color: black;
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
-    height: 100%;
+    height: 100vh;
     margin: 0;
     }
 
@@ -14,11 +14,13 @@ html, body{
     /* background: linear-gradient( to right,#cbcbcf, #cbcbcf 80%, #000014 80%, #000014 97%, #cbcbcf 97%, #cbcbcf); */
     background-image: linear-gradient(to right bottom, rgba(0,0,20,0.5), rgba(0,20,0,1));
 }
+.copyright{
+    font-size: 0.8em;
+}
 
-
-.full-height {
+/* .full-height {
     height: 100%;
-    }
+    } */
 
 .flex-center {
     align-items: center;
@@ -80,7 +82,7 @@ html, body{
     top: 46%;
     z-index: 1;
     position:absolute;
-    font-size: 2.5vw;
+    font-size: 2vw;
     text-align:right;
     transform: rotate(270deg) translateY(74.6vw) scaleY(1.7);
     letter-spacing: 0.26em;
@@ -140,6 +142,7 @@ html, body{
     z-index: 1;
     width:100%;
     height:10%;
+    
     }
 
 .bg-custom{
@@ -185,5 +188,36 @@ html, body{
     color: rgb(0 ,0 , 20);
     }
 
+.btn1{
+    background-color: #fde0c8;
+    border: 1.2px solid black;
+    border-radius: 3px;
+    }
+
+.table{
+    margin-top: 50px;
+    background: #f3f3f4;
+    width: 40vw;
+    border-radius:5px;
+}
+
+.black{
+    color: black;
+}
+.black:hover{
+    color: #f5801f;
+    text-decoration: none;
+}
+
+.float{
+    float:right;
+    width: 100px;
+}
+
+.container{
+    margin-top: 0px;
+    margin-left: 10px;
+    
+}
 
         
